@startuml

package line {
  class LineNumber {
    - Int

    + "==()"
    + >=()
    + <=()
    + {static} Option[LineNumber] parse(String, Int last)
  }

  class LineRange {
    - LineNumber start
    - LineNumber end

    + Bool contains(LineRange, LineNumber)
    + {static} Option[LineRange] parse(String)
  }

  LineRange -r-> LineNumber

  interface Body {
    + Body map(String -> String)
    + Body sMap(Body -> Seq[Body])
  }

  class NonEmptyBody {
    - String
  }

  class EmptyBody {
  }

  class NonVisibleBody {
  }

  NonEmptyBody -u-|> Body
  EmptyBody -u-|> Body
  NonVisibleBody -u-|> Body

  class Text {
    - String

    + {static} Option[Text] parse(String)
  }

  Text -d-> Body

  class Line {
    - LineNumber
    - Body body

    + Body mapIf(LineRange, String -> String)
    + Body mapIf(LineNumber, String -> String)
    + Seq[Body] sMapIf(LineRange, Body -> Seq[Body])
    + Seq[Body] sMapIf(LineNumber, Body -> Seq[Body])
    + Seq[Body] sMapIfOr(LineNumber, Body -> Seq[Body], LineRange, Body -> Seq[Body])
    + Option[Body] yank(LineRange)
    + Option[String] display()
  }

  Line -u-> LineNumber
  Line -u-> LineRange
  Line -r-> Body

  class Lines {
    - [Line]

    + {static} Lines sequenceWith([Body])
    + Int $()
    + Lines map(Line -> Body)
    + Lines sMap(Line -> Seq[Body])
    + Seq[Body] yank(LineRange)
    + Seq[String] display()
  }

  Lines -u-> Line
}

package command {
  interface EditorCommand {
  }

  interface LineCommand {
    + Lines execute(Lines)
    + UndoCommand undo(Lines)
    + {static} Option[LineCommand] parse(String, Int last) { ... }
  }

  interface UndoCommand {
    + Lines execute(Lines)
  }

  LineCommand -d-> UndoCommand

  class Append {
    - LineNumber
    - Text
    + Option[Append] parse(String, Int last)
  }

  class DeletionUndo {
    - LineRange
  }

  Append --> DeletionUndo
  
  class Delete {
    - LineRange
    + Option[Delete] parse(String, Int last)
  }

  class DeleteUndo {
    - LineNumber
    - [Body]
  }

  Delete --> DeleteUndo
  
  class Move {
    - LineRange
    - LineNumber
    + Option[Move] parse(String, Int last)
  }

  class MoveUndo {
    - LineNumber
    - [Text]
  }

  Move --> MoveUndo

  class Copy {
    - LineRange
    - LineNumber
    + Option[Copy] parse(String, Int last)
  }

  Copy --> DeletionUndo

  class Substitute {
    - LineRange
    - Text src
    - Text dst
    + Option[Substitute] parse(String, Int last)
  }

  class ConvertUndo {
    - LineRange
    - [Body]
  }

  Substitute --> ConvertUndo
  
  class Undo {
    + Option[Undo] parse(String)
  }

  class Execute {
    - LineRange
    - Text regex
    - Motions
    + Option[Execute] parse(String, Int last)
  }

  Execute --> ConvertUndo

  class Motions {
    - [Motion]

    + String -> String convert()
  }

  enum Motion {
    - Capitalize
    - Period
    + String -> String convert()
  }
  
  Execute -d-> Motions
  Motions -d-> Motion
  
  class Write {
    + Option[Write] parse(String)
  }

  Append -u-|> LineCommand
  DeletionUndo -u-|> UndoCommand
  Delete -u-|> LineCommand
  DeleteUndo -u-|> UndoCommand
  Move -u-|> LineCommand
  Copy -u-|> LineCommand
  MoveUndo -u-|> UndoCommand
  Substitute -u-|> LineCommand
  Execute -u---|> LineCommand
  ConvertUndo -u-|> UndoCommand
  Undo -u-|> EditorCommand
  Write -u-|> EditorCommand
  Append -[hidden]r-> Delete
  Delete -[hidden]r-> Move
  Move -[hidden]r-> Substitute
}

LineCommand -u-> Lines

package editor {
  class Editor {
    - String path
    - Lines
    - Option[UndoCommand] last

    + {static} Editor boot(FilePath)
    + action()
    - InputtedCommand input()
    + end()
  }

  interface InputtedCommand

  class InputtedLineCommand {
    + LineCommand
  }

  class InputtedEditorCommand {
    + EditorCommand
  }

  InputtedLineCommand -d-|> InputtedCommand
  InputtedEditorCommand -d-|> InputtedCommand

  Editor -l-> InputtedCommand
}

InputtedCommand -d-> "0..1" LineCommand
InputtedCommand -d-> "0..1" EditorCommand
Editor -u-> Lines

@enduml